<resources>
    <string name="app_name">MyPrimaryApp</string>
    <string name="titulo1">Mi Ingles</string>
    <string name="tituloboton">Siguiente</string>
    <string name="menu">Menú</string>
    <string name="morat">Maluma</string>
    <string name="descripcionmorat">Es un cantante de musica, su especialidad es la balada</string>
    <string name="frutas">Frutas</string>
    <string name="animales">Animales</string>
    <string name="colores">Colores</string>
    <string name="gato">Gato</string>
    <string name="perro">Perro</string>
    <string name="caballo">Caballo</string>
    <string name="vaca">Vaca</string>
    <string name="amarillo">Amarillo</string>
    <string name="rojo">Rojo</string>
    <string name="rosado">Rosado</string>
    <string name="verde">Verde</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="green2">Green</string>
    <string name="sinido">sonido</string>
    <string name="pina">Piña</string>
    <string name="manzana">Manzana</string>
    <string name="papaya">Papaya</string>
    <string name="pera">Pera</string>
    <string name="sandia">Sandia</string>
    <string name="uva">Uva</string>
    <string name="volver">Volver</string>
    <string name="juguego">¡Jugar!</string>
    <string name="seleccione_la_respuesta_correcta">¡Seleccione la respuesta correcta!</string>
    <string name="pregunta">¿Como es sandia en ingles?</string>
    <string name="a">a.  Watermelon</string>
    <string name="b">b. Water</string>
    <string name="c">c. Apple</string>
    <string name="d">d. Passion fruit</string>
    <string name="siguiente">Siguiente</string>
    <string name="motivacion1">Solo si marcas la respuesta correcta avanzas al siguiente ejercicio</string>
    <string name="buena_suerte">¡BUENA SUERTE!</string>
    <string name="pregunta2">¿Segun lo aprendido que animal es CAT?</string>
    <string name="seleccione">¡Seleccione la imagine correcta!</string>
    <string name="bien_echo">¡Bien echo!</string>
    <string name="a_apple">a. Apple</string>
    <string name="b_pear">b. Pear</string>
    <string name="d_cherry">d. Cherry</string>
    <string name="e_grape">e. Grape</string>
    <string name="apple">Apple</string>
    <string name="cow">Cow</string>
    <string name="watermelon">watermelon</string>
    <string name="blue">Blue</string>
    <string name="que_buen_ritmo">¡QUE BUEN RITMO!</string>
    <string name="correcta">Seleccione la respuesta correcta en donde la IMAGEN y el TEXTO coincida, en ingles</string>
    <string name="duck">Duck</string>
    <string name="cat">Cat</string>
    <string name="water">Water</string>
</resources>