<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="35dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/textmenu"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="45dp"
            android:text="@string/animales"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/amarillo"
            android:id="@+id/btnanimales"
            />

        <Button
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"
            android:text="@string/colores"
            android:textColor="@color/black"
            android:backgroundTint="@color/amarillo"
            android:textSize="22dp"
            android:id="@+id/btncolores"
            />

        <Button
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/frutas"
            android:textColor="@color/black"
            android:backgroundTint="@color/amarillo"
            android:id="@+id/btnfrutas"
            android:layout_marginBottom="45dp"
            />
        <Button
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/juguego"
            android:textColor="@color/black"
            android:backgroundTint="@color/amarillo"
            android:id="@+id/btnjuego"
            />


    </LinearLayout>

</LinearLayout>