<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".juego3"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¡Continua asi!, la meta esta cerca."
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Como se dice UVA en ingles?"
        android:layout_margin="10dp"
        android:textSize="25dp"
        android:layout_gravity="center"
        />

    <ImageView
        android:layout_width="188dp"
        android:layout_height="197dp"
        android:scaleType="centerCrop"
        android:src="@drawable/uvaanimada"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:text="@string/a_apple"
                android:textSize="18dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/blue"
                />
            <Button
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:text="@string/b_pear"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blue"
                android:textColor="@color/black"
                android:textSize="18dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:text="@string/d_cherry"
                android:textSize="18dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/blue"
                />
            <Button
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:text="@string/e_grape"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blue"
                android:textColor="@color/black"
                android:textSize="18dp"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivacion1"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAlignment="center"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buena_suerte"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/greenOscuro"
        />

</LinearLayout>