<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frutas"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frutas"
        android:textSize="29dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-condensed-medium"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="131dp"
                android:layout_height="127dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pina"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pina"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="131dp"
                android:layout_height="127dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="15dp"
                android:src="@drawable/manzana" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manzana"
                android:textSize="19dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="131dp"
                android:layout_height="127dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/papaya" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/papaya"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15sp"
            android:orientation="vertical"

            >

            <ImageView
                android:layout_width="131dp"
                android:layout_height="127dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pera"
                android:textSize="19dp" />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="131dp"
                android:layout_height="127dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sandia" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/sandia"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15sp"
            android:orientation="vertical"

            >

            <ImageView
                android:layout_width="131dp"
                android:layout_height="127dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/uvas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/uva"
                android:textSize="19dp" />

        </LinearLayout>

</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/volver"
        />
</LinearLayout>