<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Colores">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="216dp"
            android:layout_height="116dp"
            android:src="@drawable/amarillo"
            android:id="@+id/sndAmarillo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amarillo"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:textColor="@color/amarillo"
            android:gravity="center"
            android:id="@+id/traAmarillo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="216dp"
            android:layout_height="116dp"
            android:src="@drawable/verde"
            android:id="@+id/sndverde"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/verde"
            android:textColor="@color/green"
            android:textSize="18dp"
            android:gravity="center"
            android:id="@+id/traverde"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"

        >
        <ImageView
            android:layout_width="216dp"
            android:layout_height="116dp"
            android:src="@drawable/rosado"
            android:id="@+id/sndrosa"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rosado"
            android:textColor="@color/rosita"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/trarosa"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"

        >
        <ImageView
            android:layout_width="216dp"
            android:layout_height="116dp"
            android:src="@drawable/rojo"
            android:id="@+id/sndrojo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rojo"
            android:textSize="25dp"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/trarojo"
            />

    </LinearLayout>
</LinearLayout>